--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -1,1 +1,43 @@
-
+.postPageContainer {
+  .headerContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  .mainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 12.2rem;
+    .recipientContainer {
+      .toText {
+        font-size: 2.4rem;
+        font-weight: 700;
+        line-height: 42px;
+      }
+      .recipientNickname {
+        margin-top: 1.2rem;
+        margin-bottom: 5rem;
+        width: 72rem;
+        padding: 1.2rem 1.6rem;
+        font-size: 1.6rem;
+        font-weight: 400;
+        border-radius: 8px;
+        border: 1px #cccccc solid;
+      }
+      .chooseText {
+        font-size: 2.4rem;
+        font-weight: 700;
+        line-height: 3.6rem;
+        margin-bottom: 0.4rem;
+      }
+      .whichChooseText {
+        font-size: 1.6rem;
+        font-weight: 400;
+        line-height: 2.6rem;
+        margin-bottom: 2.4rem;
+      }
+    }
+  }
+}
