--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
 @mixin buttonStyleDelete {
   border: 0;
   cursor: pointer;
+  outline: none;
 }
 
 .basicSet {
@@ -19,6 +20,7 @@
   gap: 1rem;
   border-radius: 1.2rem;
   background: $Purple600;
+  border: 0.1rem solid $Purple600;
   p {
     width: 16rem;
     color: $White;
@@ -31,19 +33,21 @@
 
   &.disabled {
     background: $Grayscale300;
+    border: 0.1rem solid $Grayscale300;
     cursor: auto;
   }
 
   &:not(.disabled):hover {
     background: $Purple700;
+    border: 0.1rem solid $Purple700;
   }
   &:not(.disabled):focus {
-    border: 0.2rem solid $Purple900;
+    border: 0.1rem solid $Purple900;
     background: $Purple800;
   }
   &:not(.disabled):active {
     background: $Purple800;
-    border: 0;
+    border: 0.1rem solid $Purple800;
   }
 }
 
@@ -56,6 +60,7 @@
   gap: 1rem;
   border-radius: 0.6rem;
   background: $Purple600;
+  border: 0.2rem solid $Purple600;
   p {
     width: 9rem;
     color: $White;
@@ -68,11 +73,13 @@
 
   &.disabled {
     background: $Grayscale300;
+    border: 0.2rem solid $Grayscale300;
     cursor: auto;
   }
 
   &:not(.disabled):hover {
     background: $Purple700;
+    border: 0.2rem solid $Purple700;
   }
   &:not(.disabled):focus {
     border: 0.2rem solid $Purple900;
@@ -80,7 +87,7 @@
   }
   &:not(.disabled):active {
     background: $Purple800;
-    border: 0;
+    border: 0.2rem solid $Purple800;
   }
 }
 
@@ -106,6 +113,7 @@
 
   &.disabled {
     background: $Grayscale300;
+    border: 0.1rem solid $Grayscale300;
     p {
       color: $White;
     }
