--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -13,6 +13,7 @@
 
 .primaryButton56 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 1.4rem 2.4rem;
   justify-content: center;
@@ -53,6 +54,7 @@
 
 .primaryButton40 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 0.7rem 1.6rem;
   justify-content: center;
@@ -93,6 +95,7 @@
 
 .secondaryButton40 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 0.7rem 1.6rem;
   justify-content: center;
@@ -145,6 +148,7 @@
 
 .outlinedButton56 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 1.4rem 1.6rem;
   justify-content: center;
@@ -188,6 +192,7 @@
 
 .outlinedButton40 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   height: 4rem;
   padding: 0.8rem 1.6rem;
@@ -233,6 +238,7 @@
 
 .outlinedSmileButton40 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 0.8rem 1.6rem;
   justify-content: center;
@@ -280,6 +286,7 @@
 
 .outlinedButton36 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   height: 3.6rem;
   padding: 0.6rem 1.6rem;
@@ -324,6 +331,7 @@
 
 .outlinedSmileButton36 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 0.6rem 1.6rem;
   justify-content: center;
@@ -368,6 +376,7 @@
 
 .outlinedButton28 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   height: 2.8rem;
   padding: 0.2rem 1.6rem;
@@ -413,6 +422,7 @@
 
 .outlinedSmileButton28 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 0.6rem 1.6rem;
   justify-content: center;
@@ -458,6 +468,7 @@
 
 .outlinedSingleButton36 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 0.6rem;
   justify-content: center;
@@ -496,6 +507,7 @@
 
 .outlinedSingleButton28 {
   @include buttonStyleDelete;
+  width: 100%;
   display: inline-flex;
   padding: 0.6rem;
   justify-content: center;
