--- a/src/components/Header/HeaderComponents/Header.module.scss
+++ b/src/components/Header/HeaderComponents/Header.module.scss
@@ -1,13 +1,10 @@
 .headerContainer {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
   width: 100%;
   .headerTop {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 1.1rem 36rem;
+    padding: 1.1rem 36rem;
     .headerLogo {
       display: flex;
       align-items: center;
@@ -25,5 +22,10 @@
       padding: 8px 16px;
       font-weight: 700;
     }
+  }
+  .line {
+    border: none;
+    height: 0.1rem;
+    background-color: #ededed;
   }
 }
