--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -1,9 +1,15 @@
 @import 'assets/styles/global.scss';
 .headerServiceContainer {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: flex-start;
-  margin-right: 72rem;
+  padding: 1.1rem 36rem;
+  .toNickname {
+    font-size: 2.8rem;
+    font-weight: 700;
+    line-height: 42px;
+    letter-spacing: -0.28px;
+  }
   .headerRight {
     display: flex;
     justify-content: space-between;
@@ -73,7 +79,6 @@
       }
       .modalIcon {
         border: none;
-        cursor: pointer;
         background-color: $White;
       }
     }
@@ -94,7 +99,6 @@
       border: 1px solid var(--gray-300, $Grayscale300);
       background: var(--white, $White);
       padding: 6px 16px;
-      cursor: pointer;
     }
   }
 }
