--- a/src/components/Header/HeaderComponents/ShareDropdown.module.scss
+++ b/src/components/Header/HeaderComponents/ShareDropdown.module.scss
@@ -11,16 +11,7 @@
   box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.08);
   width: 14rem;
   height: 12rem;
-  .shareKakao {
-    width: 13.8rem;
-    height: 5rem;
-    padding: 1.6rem 1.2rem;
-    background-color: #ffffff;
-    font-weight: 400;
-    line-height: 26px;
-    font-size: 1.6rem;
-    border: none;
-  }
+  .shareKakao,
   .shareUrl {
     width: 13.8rem;
     height: 5rem;
@@ -30,5 +21,9 @@
     line-height: 26px;
     font-size: 1.6rem;
     border: none;
+    transition: background-color 0.3s;
+    &:hover {
+      background-color: #f6f6f6;
+    }
   }
 }
