style: Postpage UI

--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -38,6 +38,10 @@
         line-height: 2.6rem;
         margin-bottom: 2.4rem;
       }
+      .createBtn {
+        margin-top: 6.9rem;
+        width: 72rem;
+      }
     }
   }
 }
