chore: HeaderComponent 버튼 컴포넌트 사용

--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -80,6 +80,7 @@
       .modalIcon {
         border: none;
         background-color: $White;
+        cursor: pointer;
       }
     }
     .addEmojiBtn {
