--- a/src/components/Header/HeaderComponents/ShareDropdown.module.scss
+++ b/src/components/Header/HeaderComponents/ShareDropdown.module.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   position: absolute;
+  top: 11rem;
+  right: 26rem;
   z-index: 1;
   overflow: auto;
   border-radius: 8px;
