--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -1,9 +1,16 @@
 @import 'assets/styles/global.scss';
 .headerServiceContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 1.1rem 36rem;
+  padding: 1.1rem 0;
+  width: 100%;
+  .headerContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 120rem;
+  }
   .toNickname {
     font-size: 2.8rem;
     font-weight: 700;
