--- a/src/components/Header/HeaderLayout.module.scss
+++ b/src/components/Header/HeaderLayout.module.scss
@@ -4,4 +4,9 @@
   flex-direction: column;
   position: fixed;
   width: 100%;
+  @media (max-width: 1248px) {
+    width: calc(100% - 48px);
+    margin-left: 2.4rem;
+    margin-right: 2.4rem;
+  }
 }
