chore: Orange-> Beige 변경

--- a/src/components/BackgroundOption/BackgroundOption.module.scss
+++ b/src/components/BackgroundOption/BackgroundOption.module.scss
@@ -14,7 +14,7 @@
     align-items: center;
     position: relative;
   }
-  .orange {
+  .beige {
     background-color: $Orange200;
   }
   .purple {
