chore: 역순 레이아웃 추가 	modified:   src/components/ServiceSection/ServiceSection.jsx 	modified:   src/components/ServiceSection/ServiceSection.module.scss

--- a/src/components/ServiceSection/ServiceSection.module.scss
+++ b/src/components/ServiceSection/ServiceSection.module.scss
@@ -9,7 +9,13 @@
   background: $Surface;
 }
 
-.textContainer {
+.reverseLayout {
+  justify-content: normal;
+  padding: 6rem 0;
+
+  .textContainer {
+    order: 1;
+  }
 }
 
 .point {
