--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+#root {
+  height: 100%;
+}
