fix: Button 컴포넌트 PropTypes 오류 수정 chore: HomePage 스타일 추가 chore: HomePage에 Button 컴포넌트 추가 	modified:   src/components/Button/Button.jsx 	modified:   src/components/ServiceSection/ServiceSection.jsx 	modified:   src/components/ServiceSection/ServiceSection.module.scss 	modified:   src/pages/HomePage/HomePage.jsx 	modified:   src/pages/HomePage/HomePage.module.scss

--- a/src/components/ServiceSection/ServiceSection.module.scss
+++ b/src/components/ServiceSection/ServiceSection.module.scss
@@ -6,7 +6,9 @@
   width: 100%;
   max-width: 120rem;
   padding: 6rem 0 6rem 6rem;
+  border-radius: 1.6rem;
   background: $Surface;
+  overflow: hidden;
 }
 
 .reverseLayout {
@@ -44,4 +46,7 @@
 .image {
   max-width: 72rem;
   height: 20.4rem;
+}
+
+@media (max-width: 1200px) {
 }
