--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -2,6 +2,20 @@
   height: 6.4rem;
 }
 
+.main {
+  width: 100%;
+  margin: 6rem 0 2.4rem;
+  padding: 0 2.4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+}
+
+.button {
+  width: 28rem;
+}
+
 // 태블릿
 @media (max-width: 1200px) {
   .serviceTitleBr {
