chore: mixin 수정 - 사이즈 수정 - PC First 기준으로 작성 - tablet 크기가 desktop을 덮어씌우고 mobile이 tablet을 덮어씌움 	modified:   src/assets/styles/mixin.scss

--- a/src/assets/styles/mixin.scss
+++ b/src/assets/styles/mixin.scss
@@ -1,17 +1,12 @@
-@mixin desktop {
-  @media (min-width: 769px) {
-    @content;
-  }
-}
-
+// PC First
 @mixin tablet {
-  @media (480px<width<769px) {
+  @media (max-width: 1199px) {
     @content;
   }
 }
 
 @mixin mobile {
-  @media (max-width: 480px) {
+  @media (max-width: 767px) {
     @content;
   }
 }
