--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -13,9 +13,13 @@
         font-weight: 700;
         line-height: 42px;
       }
+      .error {
+        color: red;
+        font-size: 1.6rem;
+      }
       .recipientNickname {
         margin-top: 1.2rem;
-        margin-bottom: 5rem;
+        margin-bottom: 1rem;
         width: 72rem;
         padding: 1.2rem 1.6rem;
         font-size: 1.6rem;
@@ -28,6 +32,7 @@
         font-weight: 700;
         line-height: 3.6rem;
         margin-bottom: 0.4rem;
+        margin-top: 5rem;
       }
       .whichChooseText {
         font-size: 1.6rem;
