--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -12,6 +12,10 @@
   flex-direction: column;
   align-items: center;
   gap: 3rem;
+
+  // @include tablet {
+  //   margin:;
+  // }
 }
 
 .button {
