--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,25 +1,45 @@
 @import 'assets/styles/global.scss';
 
+.body {
+  margin: 0 2.4rem;
+
+  @include mobile {
+    margin: 0 2rem;
+  }
+}
+
 .dummyHeader {
   height: 6.4rem;
 }
 
 .main {
-  width: 100%;
-  margin: 6rem 0 2.4rem;
-  padding: 0 2.4rem;
+  margin: 6rem auto 2.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 3rem;
 
-  // @include tablet {
-  //   margin:;
-  // }
+  @include tablet {
+    width: 100%;
+    max-width: 72rem;
+    margin: 4.9rem auto 4.8rem;
+  }
+
+  @include mobile {
+    margin: 4.2rem auto 3.7rem;
+  }
 }
 
-.button {
-  width: 28rem;
+.bottom {
+  padding: 2.4rem 0;
+
+  .button {
+    width: 28rem;
+
+    @include tablet {
+      width: 100%;
+    }
+  }
 }
 
 .serviceTitleBr {
