feat: 카드 목록 영역의 너비는 1200px로 고정하고 좌우 여백만 변하다가, 화면의 너비가 1248px보다 줄어들 때 좌우 여백은 24px로 고정하고 카드들의 너비가 줄어들게 구현

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,13 +1,43 @@
+@import 'assets/styles/global.scss';
+
 html,
 body {
   height: 100%;
 }
 
 .cardListContainer {
+  display: flex;
+  justify-content: center;
   background: var(--Orange-200, #ffe2ad);
-  height: 100%;
+  height: calc(100% - 12.7rem);
 }
 
 .heightCover {
   height: 12.7rem;
+}
+
+.cardList {
+  display: grid;
+  margin-top: 11.3rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 2rem;
+  width: 120rem;
+  @media (max-width: 1248px) {
+    width: calc(100% - 4.8rem);
+    margin-left: 2.4rem;
+    margin-right: 2.4rem;
+  }
+}
+
+.basicButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 38.4rem;
+  height: 28rem;
+  border-radius: 1.6rem;
+  background: $White;
+  box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
+  padding: 2.8rem 2.4rem;
 }
