--- a/src/components/Header/HeaderLayout.module.scss
+++ b/src/components/Header/HeaderLayout.module.scss
@@ -4,6 +4,8 @@
   flex-direction: column;
   position: fixed;
   width: 100%;
+  z-index: 1;
+  background-color: white;
   @media (max-width: 1248px) {
     width: calc(100% - 48px);
     margin-left: 2.4rem;
