--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -41,3 +41,11 @@ body {
   box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
   padding: 2.8rem 2.4rem;
 }
+
+.card {
+  transition: transform 0.3s ease;
+  &:hover {
+    transform: scale(1.1);
+    z-index: 1;
+  }
+}
