chore: Modal 컴포넌트에 ReactModal, Button 및 스타일 추가 	modified:   src/components/Modal/Modal.jsx 	modified:   src/components/Modal/Modal.module.scss

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -9,6 +9,10 @@
   box-shadow: 0 0.2rem 1.2rem 0 rgba(0, 0, 0, 0.08);
 }
 
+.overlay {
+  background: rgba(0, 0, 0, 0.6);
+}
+
 .header {
   display: flex;
   justify-content: space-between;
