--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,5 +1,9 @@
 @import 'assets/styles/global.scss';
 
+.overlay {
+  background: rgba(0, 0, 0, 0.6);
+}
+
 .modal {
   width: 60rem;
   height: 47.6rem;
@@ -7,10 +11,6 @@
   border-radius: 1.6rem;
   background: $White;
   box-shadow: 0 0.2rem 1.2rem 0 rgba(0, 0, 0, 0.08);
-}
-
-.overlay {
-  background: rgba(0, 0, 0, 0.6);
 }
 
 .header {
@@ -99,4 +99,9 @@
     // &:hover {
     // }
   }
+}
+
+.submitButton {
+  width: 12rem;
+  margin: 0 auto;
 }
