--- a/src/components/BackgroundOption/BackImageOption.module.scss
+++ b/src/components/BackgroundOption/BackImageOption.module.scss
@@ -13,5 +13,14 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    cursor: pointer;
+    .image {
+      width: 100%;
+      height: 100%;
+      border-radius: 1.6rem;
+    }
+    &.selected {
+      opacity: 0.5;
+    }
   }
 }
