--- a/src/components/CheckButton/CheckButton.module.scss
+++ b/src/components/CheckButton/CheckButton.module.scss
@@ -7,6 +7,8 @@
   justify-content: center;
   align-items: center;
   border-radius: 10rem;
+  position: absolute;
+  opacity: 1;
 }
 
 .checkButton {
