--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -10,6 +10,7 @@
   background: $White;
   box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
   padding: 2.8rem 2.4rem;
+  border: 0;
 
   @include tablet {
     width: 35.2rem;
