--- a/src/components/Header/HeaderComponents/Header.module.scss
+++ b/src/components/Header/HeaderComponents/Header.module.scss
@@ -1,10 +1,14 @@
 .headerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   .headerTop {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.1rem 36rem;
+    padding: 1.1rem 0;
+    width: 120rem;
     .headerLogo {
       display: flex;
       align-items: center;
@@ -23,9 +27,9 @@
       font-weight: 700;
     }
   }
-  .line {
-    border: none;
-    height: 0.1rem;
-    background-color: #ededed;
-  }
+}
+.line {
+  border: none;
+  height: 0.1rem;
+  background-color: #ededed;
 }
