chore: 이모지 추가 버튼 클릭 시 이모지를 선택하는 영역 구현

--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -18,6 +18,7 @@
     letter-spacing: -0.28px;
   }
   .headerRight {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -85,6 +86,7 @@
         color: $White;
       }
       .modalIcon {
+        position: relative;
         border: none;
         background-color: $White;
       }
@@ -108,4 +110,10 @@
       padding: 6px 16px;
     }
   }
+}
+
+.emojiSelect {
+  position: absolute;
+  top: 4rem;
+  right: 5rem;
 }
