--- a/src/components/Header/HeaderLayout.module.scss
+++ b/src/components/Header/HeaderLayout.module.scss
@@ -6,6 +6,11 @@
   width: 100%;
   z-index: 1;
   background-color: white;
+  .headerHideOnMobile {
+    @include mobile {
+      display: none;
+    }
+  }
   @media (max-width: 1248px) {
     width: calc(100% - 48px);
     margin-left: 2.4rem;
