style: Post페이지 반응형 수정2

--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -5,12 +5,18 @@
   }
   .headerContainer {
     width: 100%;
+    @include mobile {
+      display: none;
+    }
   }
   .mainContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 12.2rem;
+    @include mobile {
+      margin-top: 5rem;
+    }
     .recipientContainer {
       .toText {
         font-size: 2.4rem;
