--- a/src/components/Header/HeaderComponents/ShareDropdown.module.scss
+++ b/src/components/Header/HeaderComponents/ShareDropdown.module.scss
@@ -1,10 +1,17 @@
+@import 'assets/styles/global.scss';
 .shareModalContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: absolute;
-  top: 11rem;
-  right: 26rem;
+  top: 10rem;
+  @include tablet {
+    right: 0;
+  }
+  @include mobile {
+    top: 11rem;
+    right: auto;
+  }
   z-index: 1;
   overflow: auto;
   border-radius: 8px;
