--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -69,7 +69,6 @@
           height: 2.8rem;
           border-radius: 14rem;
           margin-right: -1.3rem;
-
           border: 1px #e3e3e3 solid;
           background-color: $White;
           display: flex;
@@ -104,17 +103,10 @@
         margin: 0;
         margin-right: 0.8rem;
       }
-      .emojiBtn {
-        display: inline-flex;
-        padding: 8px 12px;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        gap: 10px;
-        border-radius: 3.2rem;
-        background-color: $Grayscale400;
+      .badgeBtn {
         border: none;
-        color: $White;
+        background-color: #ffffff;
+        cursor: pointer;
       }
       .modalIcon {
         border: none;
