--- a/src/components/Header/HeaderComponents/ShareDropdown.module.scss
+++ b/src/components/Header/HeaderComponents/ShareDropdown.module.scss
@@ -4,7 +4,8 @@
   flex-direction: column;
   justify-content: center;
   position: absolute;
-  top: 10rem;
+  top: 4rem;
+  right: 0;
   @include tablet {
     right: 0;
   }
