chore: 테블릿 사이즈에서 삭제하기 버튼 스타일 변경

--- a/src/pages/PostPage/PostIdPage/EditPage/EditPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/EditPage/EditPage.module.scss
@@ -29,6 +29,9 @@ body {
     margin-left: 2.4rem;
     margin-right: 2.4rem;
   }
+  @include tablet {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .basicButton {
@@ -63,4 +66,12 @@ body {
   position: absolute;
   top: -5rem;
   right: 0;
+  @include tablet {
+    position: fixed;
+    z-index: 1;
+    bottom: 2.4rem;
+    right: auto;
+    top: auto;
+    width: calc(100% - 4.8rem);
+  }
 }
