--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -12,12 +12,12 @@
   padding: 2.8rem 2.4rem;
 
   @include tablet {
-    width: 35.2rem;
-    height: 28.4rem;
+    width: 100%;
+    height: 100%;
   }
   @include mobile {
-    width: 32rem;
-    height: 23rem;
+    width: 100%;
+    height: 100%;
   }
 }
 
