--- a/src/pages/PostPage/PostIdPage/EditPage/EditPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/EditPage/EditPage.module.scss
@@ -28,9 +28,17 @@ body {
     width: calc(100% - 4.8rem);
     margin-left: 2.4rem;
     margin-right: 2.4rem;
+    margin-top: 9.3rem;
   }
   @include tablet {
+    width: 100%;
     grid-template-columns: 1fr 1fr;
+    margin-top: 9.3rem;
+  }
+  @include mobile {
+    width: 100%;
+    grid-template-columns: 1fr;
+    margin-top: 3.2rem;
   }
 }
 
@@ -44,6 +52,10 @@ body {
   background: $White;
   box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
   padding: 2.8rem 2.4rem;
+  @include tablet {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .card {
