// feat: 무한 스크롤 기본 기능 구현 	modified:   src/hooks/useIntersectionObserver.js 	modified:   src/pages/PostPage/PostIdPage/PostIdPage.jsx 	modified:   src/pages/PostPage/PostIdPage/PostIdPage.module.scss

--- a/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
@@ -8,7 +8,8 @@ body {
 .cardListContainer {
   position: relative;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background: var(--Orange-200, #ffe2ad);
   height: calc(100% - 12.7rem);
 }
