style: tablet 사이즈일떄 헤더 마진추가

--- a/src/components/Header/HeaderComponents/Header.module.scss
+++ b/src/components/Header/HeaderComponents/Header.module.scss
@@ -1,14 +1,19 @@
+@import 'assets/styles/global.scss';
 .headerContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
+
   .headerTop {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1.1rem 0;
     width: 120rem;
+    @include tablet {
+      margin: 0 2.4rem;
+    }
     .headerLogo {
       display: flex;
       align-items: center;
