--- a/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
@@ -67,10 +67,19 @@ body {
 }
 
 .toast {
-  position: absolute;
+  position: fixed;
   bottom: 7rem;
   width: 52.4rem;
   height: 6.4rem;
+  @include tablet {
+    position: fixed;
+    bottom: 7rem;
+  }
+  @include mobile {
+    position: fixed;
+    bottom: 7rem;
+    width: calc(100% - 4.8rem);
+  }
 }
 
 .editButton {
