--- a/src/components/ArrowButton/ArrowButton.module.scss
+++ b/src/components/ArrowButton/ArrowButton.module.scss
@@ -1,25 +1,15 @@
 @import 'assets/styles/global.scss';
 
 .arrowButton {
-  position: relative;
-  width: 4rem;
-  height: 4rem;
+  //position: relative;
   cursor: pointer;
 }
 
-.arrowButtonBackground {
-  width: 4rem;
-  height: 4rem;
-  fill: rgba(255, 255, 255, 0.9);
-  stroke-width: 0.1rem;
-  stroke: $Grayscale300;
-  filter: drop-shadow(0rem 0.4rem 0.8rem rgba(0, 0, 0, 0.08));
-}
-
 .arrowButtonImg {
-  position: absolute;
-  width: 1.4rem;
-  height: 1.4rem;
-  top: 1rem;
-  left: 1.2rem;
+  width: 6rem;
+  height: 6rem;
+  // fill: rgba(255, 255, 255, 0.9);
+  // stroke-width: 0.1rem;
+  // stroke: $Grayscale300;
+  // filter: drop-shadow(0rem 0.4rem 0.8rem rgba(0, 0, 0, 0.08));
 }
