--- a/src/components/Header/HeaderComponents/Header.module.scss
+++ b/src/components/Header/HeaderComponents/Header.module.scss
@@ -1,36 +1,32 @@
 @import 'assets/styles/global.scss';
 .headerContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
-
-  .headerTop {
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.1rem 0;
+  width: 120rem;
+  background: var(--white, #fff);
+  @include tablet {
+    margin: 0 2.4rem;
+  }
+  .headerLogo {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 1.1rem 0;
-    width: 120rem;
-    @include tablet {
-      margin: 0 2.4rem;
-    }
-    .headerLogo {
-      display: flex;
-      align-items: center;
-      gap: 0.8rem;
-      .headerTitle {
-        font-size: 2rem;
-        font-weight: 700;
-        color: var(--gray-light-gray-90, #4a494f);
-      }
-    }
-    .addRollingBtn {
-      border-radius: 6px;
-      border: 1px solid var(--gray-300, #ccc);
-      background: var(--white, #fff);
-      padding: 8px 16px;
+    gap: 0.8rem;
+    .headerTitle {
+      font-size: 2rem;
       font-weight: 700;
+      color: var(--gray-light-gray-90, #4a494f);
     }
+  }
+  .addRollingBtn {
+    border-radius: 0.6rem;
+    border: 1px solid var(--gray-300, #ccc);
+    background: var(--white, #fff);
+    padding: 0.8px 1.6px;
+    font-weight: 700;
   }
 }
 .line {
