chore: 모바일 사이즈에서 모달 크기 변경

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -30,6 +30,12 @@
     top: 50%;
     transform: translate(-50%, -50%);
   }
+  @include mobile {
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 40rem;
+    height: 47.6rem;
+  }
 }
 
 .header {
