feat: ColorOption 색추가

--- a/src/components/BackgroundOption/BackColorOption.module.scss
+++ b/src/components/BackgroundOption/BackColorOption.module.scss
@@ -36,4 +36,13 @@
   .green {
     background-color: $Green200;
   }
+  .yellow {
+    background-color: #fdf449;
+  }
+  .red {
+    background-color: #f78181;
+  }
+  .gray {
+    background-color: #d8d8d8;
+  }
 }
