chore: 여러가지 잡다한 수정 	modified:   src/components/Header/HeaderComponents/Header.jsx 	modified:   src/components/Header/HeaderComponents/Header.module.scss 	modified:   src/hooks/useGetMessageList.js 	modified:   src/hooks/useIntersectionObserver.js 	modified:   src/pages/HomePage/HomePage.module.scss 	modified:   src/pages/PostPage/PostIdPage/PostIdPage.jsx 	modified:   src/pages/PostPage/PostIdPage/PostIdPage.module.scss

--- a/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
@@ -12,7 +12,9 @@ body {
 .cardListContainer {
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   height: 100%;
   overflow: scroll;
 }
