--- a/src/components/Header/HeaderComponents/Header.module.scss
+++ b/src/components/Header/HeaderComponents/Header.module.scss
@@ -1,20 +1,14 @@
 @import 'assets/styles/global.scss';
 .headerContainer {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  margin: 0 auto;
   width: 100%;
-  .headerTop {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.1rem 0;
-    width: 120rem;
-  }
+  max-width: 120rem;
+  padding: 1.1rem 2.4rem;
   background: var(--white, #fff);
-  @include tablet {
-    margin: 0 2.4rem;
-  }
+
   .headerLogo {
     display: flex;
     align-items: center;
